--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
-  <title>tae_1</title>
+  <title>Tarea Tae 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
   <div id="react-target"></div>
